Fix colorpicker z-index

--- a/css/admin.scss
+++ b/css/admin.scss
@@ -130,10 +130,6 @@
 		font-size: 9px;
 		text-transform:uppercase;
 	}
-	
-	.colorpicker {
-		z-index: 999;
-	}
 
 	.ui {
 		table.jPicker {
